--- a/testRAF/Views/Shared/_Layout.cshtml
+++ b/testRAF/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("filmler", "Index", "Filmler")</li>
                     @*<li>@Html.ActionLink("filmler", "Index", "Filmler")</li>*@
-                    <li class="disabled ">@Html.ActionLink("diziler", "Index", "Home")</li>
+                    <li>@Html.ActionLink("diziler", "Index", "Home")</li>
                     <li>@Html.ActionLink("listeler", "", "Listeler")</li>
                     <li>
                         @Html.ActionLink("türler", "Index", "Home")
